# raincheck

./: Cargo.toml  README.md  build.rs  env  sample-response.json
src/: main.rs  openwearther_response.rs
