[package]
name = "raincheck"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
reqwest = { version = "0.12.8" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }

[build-dependencies]
dotenv = "0.15.0"
